--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -53,7 +53,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Experience</h2>
+          <h2>Work Experience</h2>
         </header>
 
         {% for job in site.data.experience %}
@@ -160,7 +160,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>Organizational Experiences</h2>
         </header>
 
         {% for association in site.data.associations %}
