--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -47,6 +47,16 @@
         {% endif %}
 
       </header>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-68280294-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-68280294-1');
+</script>
+
 
       {% if site.resume_section_experience %}
       <!-- begin Experience -->
